[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]

members = [
    "hello_cargo",
    "minigrep",
    "lifetimes",
    "play",
    "lists",
    "rectangles",
    "learn_enum",
    "calc",
]
